--- a/home/index.html
+++ b/home/index.html
@@ -13,7 +13,7 @@
     >
       <h1 style="text-align: center">Welcome to BigBite Backend</h1>
       <a
-        href=http://localhost:8000/v1/api/api-docs
+        href=https://node-template-us8b.onrender.com/v1/api/api-docs
         style="
           border: 1px solid black;
           padding: 10px 14px;
